Added most of the text that fit into the section

--- a/index.html
+++ b/index.html
@@ -8,33 +8,68 @@
       <nav class="Header__navbar">
         <div class="Header__navigation"></div>
       </nav>
-      <section class="Header__content"></section>
+      <section class="Header__content">
+        <h1>DaJuan</h1>
+        <p>A <span class="Header__highlight"><em>Full Stack Developer</em></span></p>
+      </section>
     </header>
     <main class="Main">
       <section class="Main__about" id="about">
-        <div class="Main__aboutContent"></div>
+        <div class="Main__aboutContent">
+          <h4>About</h4>
+          <h2>I'm DaJuan Harris</h2>
+          <p>
+            Partnership learning curve iPad termsheet iPhone. MVP deployment product management supply chain mass market market bootstrapping infographic accelerator business model canvas hypotheses ownership twitter. Virality lean startup freemium marketing gamification hypotheses. Seed money value proposition launch party customer buyer.
+          </p>
+          <p>
+            Incubator sales graphical user interface mass market funding user experience network effects channels. Venture business-to-business A/B testing. Metrics technology infrastructure validation graphical user interface alpha crowdsource hypotheses conversion return on investment backing. Disruptive technology interaction design conversion return on investment long tail.
+          </p>
+        </div>
       </section>
       <section class="Main__work" id="work">
+        <h4>Work</h4>
+        <h2>Latest Projects</h2>
         <div class="Main__project">
-          <div class="Main__projectContent"></div>
+          <div class="Main__projectContent">
+            <h3><strong>Project Title</strong></h3>
+            <p>Incubator sales graphical user interface mass market funding user experience network effects channels.</p>
+          </div>
         </div>
         <div class="Main__project">
-          <div class="Main__projectContent"></div>
+          <div class="Main__projectContent">
+            <h3><strong>Project Title</strong></h3>
+            <p>Incubator sales graphical user interface mass market funding user experience network effects channels.</p>
+          </div>
         </div>
         <div class="Main__project">
-          <div class="Main__projectContent"></div>
+          <div class="Main__projectContent">
+            <h3><strong>Project Title</strong></h3>
+            <p>Incubator sales graphical user interface mass market funding user experience network effects channels.</p>
+          </div>
         </div>
         <div class="Main__project">
-          <div class="Main__projectContent"></div>
+          <div class="Main__projectContent">
+            <h3><strong>Project Title</strong></h3>
+            <p>Incubator sales graphical user interface mass market funding user experience network effects channels.</p>
+          </div>
         </div>
         <div class="Main__project">
-          <div class="Main__projectContent"></div>
+          <div class="Main__projectContent">
+            <h3><strong>Project Title</strong></h3>
+            <p>Incubator sales graphical user interface mass market funding user experience network effects channels.</p>
+          </div>
         </div>
         <div class="Main__project">
-          <div class="Main__projectContent"></div>
+          <div class="Main__projectContent">
+            <h3><strong>Project Title</strong></h3>
+            <p>Incubator sales graphical user interface mass market funding user experience network effects channels.</p>
+          </div>
         </div>
       </section>
-      <section class="Main__contact" id="contact"></section>
+      <section class="Main__contact" id="contact">
+        <h4>Contact</h4>
+        <h2>Get In Touch</h2>
+      </section>
     </main>
     <footer class="Footer">
       <section class="Footer__content"></section>
