Added text to footer and added more details to README :

--- a/index.html
+++ b/index.html
@@ -72,7 +72,9 @@
       </section>
     </main>
     <footer class="Footer">
-      <section class="Footer__content"></section>
+      <section class="Footer__content">
+        <p>&copy; 2020 DaJuan Harris</p>
+      </section>
     </footer>
   </body>
 </html>
