Added lists to website

--- a/index.html
+++ b/index.html
@@ -2,11 +2,20 @@
 <html>
   <head>
     <title>DaJuan's Portfolio</title>
+
+    <script src="https://kit.fontawesome.com/fff4d5abe8.js" crossorigin="anonymous"></script>
   </head>
   <body id=home>
     <header class="Header">
       <nav class="Header__navbar">
-        <div class="Header__navigation"></div>
+        <div class="Header__navigation">
+          <ul class="Header__navContent">
+            <li class="Header__navItem">Home</li>
+            <li class="Header__navItem">About</li>
+            <li class="Header__navItem">Work</li>
+            <li class="Header__navItem">Contact</li>
+          </ul>
+        </div>
       </nav>
       <section class="Header__content">
         <h1>DaJuan</h1>
@@ -74,6 +83,13 @@
     <footer class="Footer">
       <section class="Footer__content">
         <p>&copy; 2020 DaJuan Harris</p>
+        <ul>
+          <li class="socialItem"><i class="fab fa-github"></i></li>
+          <li class="socialItem"><i class="fab fa-facebook-square"></i></li>
+          <li class="socialItem"><i class="fab fa-instagram"></i></li>
+          <li class="socialItem"><i class="fab fa-twitter"></i></li>
+          <li class="socialItem"><i class="fab fa-linkedin-in"></i></li>
+        </ul>
       </section>
     </footer>
   </body>
