Added links to the portfolio, and created a links example

--- a/index.html
+++ b/index.html
@@ -10,10 +10,18 @@
       <nav class="Header__navbar">
         <div class="Header__navigation">
           <ul class="Header__navContent">
-            <li class="Header__navItem">Home</li>
-            <li class="Header__navItem">About</li>
-            <li class="Header__navItem">Work</li>
-            <li class="Header__navItem">Contact</li>
+            <li class="Header__navItem">
+              <a class="Header__navLink" href="#home">Home</a>
+            </li>
+            <li class="Header__navItem">
+              <a class="Header__navLink" href="#about">About</a>
+            </li>
+            <li class="Header__navItem">
+              <a class="Header__navLink" href="#work">Work</a>
+            </li>
+            <li class="Header__navItem">
+              <a class="Header__navLink" href="#contact">Contact</a>
+            </li>
           </ul>
         </div>
       </nav>
@@ -84,11 +92,31 @@
       <section class="Footer__content">
         <p>&copy; 2020 DaJuan Harris</p>
         <ul>
-          <li class="socialItem"><i class="fab fa-github"></i></li>
-          <li class="socialItem"><i class="fab fa-facebook-square"></i></li>
-          <li class="socialItem"><i class="fab fa-instagram"></i></li>
-          <li class="socialItem"><i class="fab fa-twitter"></i></li>
-          <li class="socialItem"><i class="fab fa-linkedin-in"></i></li>
+          <li class="Footer__socialItem">
+            <a class="Footer__socialLink" href="http://www.github.com" target="_blank">
+              <i class="fab fa-github"></i>
+            </a>
+          </li>
+          <li class="Footer__socialItem">
+            <a class="Footer__socialLink" href="http://www.facebook.com" target="_blank">
+              <i class="fab fa-facebook-square"></i>
+            </a>
+          </li>
+          <li class="Footer__socialItem">
+            <a class="Footer__socialLink" href="http://www.instagram.com" target="_blank">
+              <i class="fab fa-instagram"></i>
+            </a>
+          </li>
+          <li class="Footer__socialItem">
+           <a class="Footer__socialLink" href="http://www.twitter.com" target="_blank">
+            <i class="fab fa-twitter"></i>
+           </a>
+          </li>
+          <li class="Footer__socialItem">
+           <a class="Footer__socialLink" href="http://www.linkedin.com" target="_blank">
+            <i class="fab fa-linkedin-in"></i>
+           </a>
+          </li>
         </ul>
       </section>
     </footer>
