Added images to website

--- a/index.html
+++ b/index.html
@@ -31,66 +31,89 @@
       </section>
     </header>
     <main class="Main">
-      <section class="Main__about" id="about">
-        <div class="Main__aboutContent">
-          <h4>About</h4>
-          <h2>I'm DaJuan Harris</h2>
-          <p>
+      <section class=About" id="about">
+        <div class="About__ImgContainer">
+          <img class="About__img" src="./assets/DJH.png" alt="DaJuan Harris" height="342px" width="342px"/>
+        </div>
+        <div class="About__content">
+          <h4 class="About__title">About</h4>
+          <h2 class="About__subTitle">I'm DaJuan Harris</h2>
+          <p class="Aboout__info">
             Partnership learning curve iPad termsheet iPhone. MVP deployment product management supply chain mass market market bootstrapping infographic accelerator business model canvas hypotheses ownership twitter. Virality lean startup freemium marketing gamification hypotheses. Seed money value proposition launch party customer buyer.
           </p>
-          <p>
+          <p class="Aboout__info">
             Incubator sales graphical user interface mass market funding user experience network effects channels. Venture business-to-business A/B testing. Metrics technology infrastructure validation graphical user interface alpha crowdsource hypotheses conversion return on investment backing. Disruptive technology interaction design conversion return on investment long tail.
           </p>
         </div>
       </section>
-      <section class="Main__work" id="work">
+      <section class="Work" id="work">
         <h4>Work</h4>
         <h2>Latest Projects</h2>
-        <div class="Main__project">
-          <div class="Main__projectContent">
-            <h3><strong>Project Title</strong></h3>
-            <p>Incubator sales graphical user interface mass market funding user experience network effects channels.</p>
+        <div class="Work__projects">
+          <div class="Work__project">
+            <div class="Work__projectImgContainer">
+              <img class="Work__projectImg" src="https://source.unsplash.com/collection/962362/342x342" alt="random image"/>
+            </div>
+            <div class="Work__projectContent">
+              <h3 class="Work__projectTitle"><strong>Project Title</strong></h3>
+              <p class="Work__projectInfo">Incubator sales graphical user interface mass market funding user experience network effects channels.</p>
+            </div>
           </div>
-        </div>
-        <div class="Main__project">
-          <div class="Main__projectContent">
-            <h3><strong>Project Title</strong></h3>
-            <p>Incubator sales graphical user interface mass market funding user experience network effects channels.</p>
+          <div class="Work__project">
+            <div class="Work__projectImgContainer">
+              <img class="Work__projectImg" src="https://source.unsplash.com/collection/962362/342x342" alt="random image"/>
+            </div>
+            <div class="Work__projectContent">
+              <h3 class="Work__projectTitle"><strong>Project Title</strong></h3>
+              <p class="Work__projectInfo">Incubator sales graphical user interface mass market funding user experience network effects channels.</p>
+            </div>
           </div>
-        </div>
-        <div class="Main__project">
-          <div class="Main__projectContent">
-            <h3><strong>Project Title</strong></h3>
-            <p>Incubator sales graphical user interface mass market funding user experience network effects channels.</p>
+          <div class="Work__project">
+            <div class="Work__projectImgContainer">
+              <img class="Work__projectImg" src="https://source.unsplash.com/collection/962362/342x342" alt="random image"/>
+            </div>
+            <div class="Work__projectContent">
+              <h3 class="Work__projectTitle"><strong>Project Title</strong></h3>
+              <p class="Work__projectInfo">Incubator sales graphical user interface mass market funding user experience network effects channels.</p>
+            </div>
           </div>
-        </div>
-        <div class="Main__project">
-          <div class="Main__projectContent">
-            <h3><strong>Project Title</strong></h3>
-            <p>Incubator sales graphical user interface mass market funding user experience network effects channels.</p>
+          <div class="Work__project">
+            <div class="Work__projectImgContainer">
+              <img class="Work__projectImg" src="https://source.unsplash.com/collection/962362/342x342" alt="random image"/>
+            </div>
+            <div class="Work__projectContent">
+              <h3 class="Work__projectTitle"><strong>Project Title</strong></h3>
+              <p class="Work__projectInfo">Incubator sales graphical user interface mass market funding user experience network effects channels.</p>
+            </div>
           </div>
-        </div>
-        <div class="Main__project">
-          <div class="Main__projectContent">
-            <h3><strong>Project Title</strong></h3>
-            <p>Incubator sales graphical user interface mass market funding user experience network effects channels.</p>
+          <div class="Work__project">
+            <div class="Work__projectImgContainer">
+              <img class="Work__projectImg" src="https://source.unsplash.com/collection/962362/342x342" alt="random image"/>
+            </div>
+            <div class="Work__projectContent">
+              <h3 class="Work__projectTitle"><strong>Project Title</strong></h3>
+              <p class="Work__projectInfo">Incubator sales graphical user interface mass market funding user experience network effects channels.</p>
+            </div>
           </div>
-        </div>
-        <div class="Main__project">
-          <div class="Main__projectContent">
-            <h3><strong>Project Title</strong></h3>
-            <p>Incubator sales graphical user interface mass market funding user experience network effects channels.</p>
+          <div class="Work__project">
+            <div class="Work__projectImgContainer">
+              <img class="Work__projectImg" src="https://source.unsplash.com/collection/962362/342x342" alt="random image"/>
+            </div>
+            <div class="Work__projectContent">
+              <h3 class="Work__projectTitle"><strong>Project Title</strong></h3>
+              <p class="Work__projectInfo">Incubator sales graphical user interface mass market funding user experience network effects channels.</p>
+            </div>
           </div>
         </div>
       </section>
-      <section class="Main__contact" id="contact">
-        <h4>Contact</h4>
-        <h2>Get In Touch</h2>
+      <section class="Contact" id="contact">
+        <h4 class="Contact__title">Contact</h4>
+        <h2 class="Contact__subTitle">Get In Touch</h2>
       </section>
     </main>
     <footer class="Footer">
       <section class="Footer__content">
-        <p>&copy; 2020 DaJuan Harris</p>
+        <p class="Footer__copyright">&copy; 2020 DaJuan Harris</p>
         <ul>
           <li class="Footer__socialItem">
             <a class="Footer__socialLink" href="http://www.github.com" target="_blank">
