Staging changes on text-css branch

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-
+    <link href="https://fonts.googleapis.com/css2?family=Karla:ital,wght@1,700&family=Open+Sans:ital,wght@0,400;0,600;1,400&display=swap" rel="stylesheet"> 
     <link rel="stylesheet" href="./styles/main.css" type="text/css">
 
     <title>DaJuan's Portfolio</title>
@@ -30,7 +30,8 @@
         </div>
       </nav>
       <section class="Header__content">
-        <h1 class="Header__title">DaJuan</h1>
+        <p class="Header__wave">Hello 👋</p>
+        <h1 class="Header__title">I'm DaJuan</h1>
         <p class="Header__subTitle">A <span class="Header__highlight"><em>Full Stack Developer</em></span></p>
       </section>
     </header>
@@ -41,7 +42,7 @@
         </div>
         <div class="About__content">
           <h4 class="About__title">About</h4>
-          <h2 class="About__subTitle">I'm DaJuan Harris</h2>
+          <h2 class="About__subTitle">My Name Is DaJuan Harris</h2>
           <p class="About__info">
             Partnership learning curve iPad termsheet iPhone. MVP deployment product management supply chain mass market market bootstrapping infographic accelerator business model canvas hypotheses ownership twitter. Virality lean startup freemium marketing gamification hypotheses. Seed money value proposition launch party customer buyer.
           </p>
