Developed the box model branch

--- a/index.html
+++ b/index.html
@@ -30,19 +30,18 @@
         </div>
       </nav>
       <section class="Header__content">
-        <p class="Header__wave">Hello 👋</p>
         <h1 class="Header__title">I'm DaJuan</h1>
         <p class="Header__subTitle">A <span class="Header__highlight"><em>Full Stack Developer</em></span></p>
       </section>
     </header>
     <main class="Container">
-      <section class=About" id="about">
-        <div class="About__ImgContainer">
-          <img class="About__img" src="./assets/DJH.png" alt="DaJuan Harris" height="342px" width="342px"/>
+      <section class="About" id="about">
+        <h4 class="About__title">About</h4>
+        <h2 class="About__subTitle">My Name Is DaJuan Harris</h2>
+        <div class="About__imgContainer">
+          <img class="About__img" src="./assets/DJH.png" alt="DaJuan Harris"/>
         </div>
         <div class="About__content">
-          <h4 class="About__title">About</h4>
-          <h2 class="About__subTitle">My Name Is DaJuan Harris</h2>
           <p class="About__info">
             Partnership learning curve iPad termsheet iPhone. MVP deployment product management supply chain mass market market bootstrapping infographic accelerator business model canvas hypotheses ownership twitter. Virality lean startup freemium marketing gamification hypotheses. Seed money value proposition launch party customer buyer.
           </p>
