--- a/index.html
+++ b/index.html
@@ -1,17 +1,26 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link href="https://fonts.googleapis.com/css2?family=Karla:ital,wght@1,700&family=Open+Sans:ital,wght@0,400;0,600;1,400&display=swap" rel="stylesheet"> 
-    <link rel="stylesheet" href="./styles/main.css" type="text/css">
+    <link
+      href="https://fonts.googleapis.com/css2?family=Karla:ital,wght@1,700&family=Open+Sans:ital,wght@0,400;0,600;1,400&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./styles/main.css" type="text/css" />
 
     <title>DaJuan's Portfolio</title>
 
-    <script src="https://kit.fontawesome.com/fff4d5abe8.js" crossorigin="anonymous"></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta charset="utf-8" />
+
+    <script
+      src="https://kit.fontawesome.com/fff4d5abe8.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
-  <body id=home>
+  <body id="home">
     <header class="Header">
-      <h1 class="Header__logo">dajuan</h1>
       <nav class="Header__navbar">
+        <h1 class="Header__logo">dajuan</h1>
         <div class="Header__navigation">
           <ul class="Header__navContent">
             <li class="Header__navItem">
@@ -31,7 +40,9 @@
       </nav>
       <section class="Header__content">
         <h1 class="Header__title">I'm DaJuan</h1>
-        <p class="Header__subTitle">A <span class="Header__highlight"><em>Full Stack Developer</em></span></p>
+        <p class="Header__subTitle">
+          A <span class="Header__highlight"><em>Full Stack Developer</em></span>
+        </p>
       </section>
     </header>
     <main class="Container">
@@ -39,14 +50,24 @@
         <h4 class="About__title">About</h4>
         <h2 class="About__subTitle">My Name Is DaJuan Harris</h2>
         <div class="About__imgContainer">
-          <img class="About__img" src="./assets/DJH.png" alt="DaJuan Harris"/>
+          <img class="About__img" src="./assets/DJH.png" alt="DaJuan Harris" />
         </div>
         <div class="About__content">
           <p class="About__info">
-            Partnership learning curve iPad termsheet iPhone. MVP deployment product management supply chain mass market market bootstrapping infographic accelerator business model canvas hypotheses ownership twitter. Virality lean startup freemium marketing gamification hypotheses. Seed money value proposition launch party customer buyer.
+            Partnership learning curve iPad termsheet iPhone. MVP deployment
+            product management supply chain mass market market bootstrapping
+            infographic accelerator business model canvas hypotheses ownership
+            twitter. Virality lean startup freemium marketing gamification
+            hypotheses. Seed money value proposition launch party customer
+            buyer.
           </p>
           <p class="About__info">
-            Incubator sales graphical user interface mass market funding user experience network effects channels. Venture business-to-business A/B testing. Metrics technology infrastructure validation graphical user interface alpha crowdsource hypotheses conversion return on investment backing. Disruptive technology interaction design conversion return on investment long tail.
+            Incubator sales graphical user interface mass market funding user
+            experience network effects channels. Venture business-to-business
+            A/B testing. Metrics technology infrastructure validation graphical
+            user interface alpha crowdsource hypotheses conversion return on
+            investment backing. Disruptive technology interaction design
+            conversion return on investment long tail.
           </p>
           <button class="btn About__btn">Download Resume</button>
         </div>
@@ -57,56 +78,98 @@
         <div class="Work__projects">
           <div class="Work__project">
             <div class="Work__projectImgContainer">
-              <img class="Work__projectImg" src="https://source.unsplash.com/collection/962362/342x342" alt="random image"/>
+              <img
+                class="Work__projectImg"
+                src="https://source.unsplash.com/collection/962362/342x342"
+                alt="random image"
+              />
             </div>
             <div class="Work__projectContent">
               <h3 class="Work__projectTitle"><strong>Project Title</strong></h3>
-              <p class="Work__projectInfo">Incubator sales graphical user interface mass market funding user experience network effects channels.</p>
+              <p class="Work__projectInfo">
+                Incubator sales graphical user interface mass market funding
+                user experience network effects channels.
+              </p>
             </div>
           </div>
           <div class="Work__project">
             <div class="Work__projectImgContainer">
-              <img class="Work__projectImg" src="https://source.unsplash.com/collection/962362/342x342" alt="random image"/>
+              <img
+                class="Work__projectImg"
+                src="https://source.unsplash.com/collection/962362/342x342"
+                alt="random image"
+              />
             </div>
             <div class="Work__projectContent">
               <h3 class="Work__projectTitle"><strong>Project Title</strong></h3>
-              <p class="Work__projectInfo">Incubator sales graphical user interface mass market funding user experience network effects channels.</p>
+              <p class="Work__projectInfo">
+                Incubator sales graphical user interface mass market funding
+                user experience network effects channels.
+              </p>
             </div>
           </div>
           <div class="Work__project">
             <div class="Work__projectImgContainer">
-              <img class="Work__projectImg" src="https://source.unsplash.com/collection/962362/342x342" alt="random image"/>
+              <img
+                class="Work__projectImg"
+                src="https://source.unsplash.com/collection/962362/342x342"
+                alt="random image"
+              />
             </div>
             <div class="Work__projectContent">
               <h3 class="Work__projectTitle"><strong>Project Title</strong></h3>
-              <p class="Work__projectInfo">Incubator sales graphical user interface mass market funding user experience network effects channels.</p>
+              <p class="Work__projectInfo">
+                Incubator sales graphical user interface mass market funding
+                user experience network effects channels.
+              </p>
             </div>
           </div>
           <div class="Work__project">
             <div class="Work__projectImgContainer">
-              <img class="Work__projectImg" src="https://source.unsplash.com/collection/962362/342x342" alt="random image"/>
+              <img
+                class="Work__projectImg"
+                src="https://source.unsplash.com/collection/962362/342x342"
+                alt="random image"
+              />
             </div>
             <div class="Work__projectContent">
               <h3 class="Work__projectTitle"><strong>Project Title</strong></h3>
-              <p class="Work__projectInfo">Incubator sales graphical user interface mass market funding user experience network effects channels.</p>
+              <p class="Work__projectInfo">
+                Incubator sales graphical user interface mass market funding
+                user experience network effects channels.
+              </p>
             </div>
           </div>
           <div class="Work__project">
             <div class="Work__projectImgContainer">
-              <img class="Work__projectImg" src="https://source.unsplash.com/collection/962362/342x342" alt="random image"/>
+              <img
+                class="Work__projectImg"
+                src="https://source.unsplash.com/collection/962362/342x342"
+                alt="random image"
+              />
             </div>
             <div class="Work__projectContent">
               <h3 class="Work__projectTitle"><strong>Project Title</strong></h3>
-              <p class="Work__projectInfo">Incubator sales graphical user interface mass market funding user experience network effects channels.</p>
+              <p class="Work__projectInfo">
+                Incubator sales graphical user interface mass market funding
+                user experience network effects channels.
+              </p>
             </div>
           </div>
           <div class="Work__project">
             <div class="Work__projectImgContainer">
-              <img class="Work__projectImg" src="https://source.unsplash.com/collection/962362/342x342" alt="random image"/>
+              <img
+                class="Work__projectImg"
+                src="https://source.unsplash.com/collection/962362/342x342"
+                alt="random image"
+              />
             </div>
             <div class="Work__projectContent">
               <h3 class="Work__projectTitle"><strong>Project Title</strong></h3>
-              <p class="Work__projectInfo">Incubator sales graphical user interface mass market funding user experience network effects channels.</p>
+              <p class="Work__projectInfo">
+                Incubator sales graphical user interface mass market funding
+                user experience network effects channels.
+              </p>
             </div>
           </div>
         </div>
@@ -118,19 +181,41 @@
           <form action="/" method="post" class="Contact__form">
             <div class="Contact__formField">
               <label class="Contact__label" for="name">Name:</label>
-              <input type="text" name="name" id="name" required class="Contact__input">
+              <input
+                type="text"
+                name="name"
+                id="name"
+                required
+                class="Contact__input"
+              />
             </div>
             <div class="Contact__formField">
               <label class="Contact__label" for="email">Email:</label>
-              <input type="email" name="email" id="email" required class="Contact__input">
+              <input
+                type="email"
+                name="email"
+                id="email"
+                required
+                class="Contact__input"
+              />
             </div>
             <div class="Contact__formField">
               <label class="Contact__label" for="phone">Phone Number:</label>
-              <input type="text" name="phone" id="phone" required class="Contact__input">
+              <input
+                type="text"
+                name="phone"
+                id="phone"
+                required
+                class="Contact__input"
+              />
             </div>
             <div class="Contact__MessageField">
               <label class="Contact__label" for="message">Message:</label>
-              <textarea name="message" id="message" class="Contact__mesage"></textarea>
+              <textarea
+                name="message"
+                id="message"
+                class="Contact__mesage"
+              ></textarea>
             </div>
             <button type="submit" class="btn Contact__btn">Submit</button>
           </form>
@@ -139,32 +224,52 @@
     </main>
     <footer class="Footer">
       <section class="Footer__content">
-        <p class="Footer__copyright">&copy; 2020 DaJuan Harris</p>
-        <ul>
+        <p class="Footer__copyright">&copy; 2020 Developed by DaJuan Harris</p>
+        <ul class="Footer__socials">
           <li class="Footer__socialItem">
-            <a class="Footer__socialLink" href="http://www.github.com" target="_blank">
+            <a
+              class="Footer__socialLink"
+              href="http://www.github.com"
+              target="_blank"
+            >
               <i class="fab fa-github"></i>
             </a>
           </li>
           <li class="Footer__socialItem">
-            <a class="Footer__socialLink" href="http://www.facebook.com" target="_blank">
+            <a
+              class="Footer__socialLink"
+              href="http://www.facebook.com"
+              target="_blank"
+            >
               <i class="fab fa-facebook-square"></i>
             </a>
           </li>
           <li class="Footer__socialItem">
-            <a class="Footer__socialLink" href="http://www.instagram.com" target="_blank">
+            <a
+              class="Footer__socialLink"
+              href="http://www.instagram.com"
+              target="_blank"
+            >
               <i class="fab fa-instagram"></i>
             </a>
           </li>
           <li class="Footer__socialItem">
-           <a class="Footer__socialLink" href="http://www.twitter.com" target="_blank">
-            <i class="fab fa-twitter"></i>
-           </a>
+            <a
+              class="Footer__socialLink"
+              href="http://www.twitter.com"
+              target="_blank"
+            >
+              <i class="fab fa-twitter"></i>
+            </a>
           </li>
           <li class="Footer__socialItem">
-           <a class="Footer__socialLink" href="http://www.linkedin.com" target="_blank">
-            <i class="fab fa-linkedin-in"></i>
-           </a>
+            <a
+              class="Footer__socialLink"
+              href="http://www.linkedin.com"
+              target="_blank"
+            >
+              <i class="fab fa-linkedin-in"></i>
+            </a>
           </li>
         </ul>
       </section>
