Styled Tablet Breakpoint

--- a/index.html
+++ b/index.html
@@ -49,27 +49,30 @@
       <section class="About" id="about">
         <h4 class="About__title">About</h4>
         <h2 class="About__subTitle">My Name Is DaJuan Harris</h2>
-        <div class="About__imgContainer">
-          <img class="About__img" src="./assets/DJH.png" alt="DaJuan Harris" />
-        </div>
         <div class="About__content">
-          <p class="About__info">
-            Partnership learning curve iPad termsheet iPhone. MVP deployment
-            product management supply chain mass market market bootstrapping
-            infographic accelerator business model canvas hypotheses ownership
-            twitter. Virality lean startup freemium marketing gamification
-            hypotheses. Seed money value proposition launch party customer
-            buyer.
-          </p>
-          <p class="About__info">
-            Incubator sales graphical user interface mass market funding user
-            experience network effects channels. Venture business-to-business
-            A/B testing. Metrics technology infrastructure validation graphical
-            user interface alpha crowdsource hypotheses conversion return on
-            investment backing. Disruptive technology interaction design
-            conversion return on investment long tail.
-          </p>
-          <button class="btn About__btn">Download Resume</button>
+          <div class="About__imgContainer">
+            <img class="About__img" src="./assets/DJH.png" alt="DaJuan Harris" />
+          </div>
+          <div class="About__bioContent">
+            <p class="About__bio">
+              Partnership learning curve iPad termsheet iPhone. MVP deployment
+              product management supply chain mass market market bootstrapping
+              infographic accelerator business model canvas hypotheses ownership
+              twitter. Virality lean startup freemium marketing gamification
+              hypotheses. Seed money value proposition launch party customer
+              buyer.
+            </p>
+            <p class="About__bio">
+              Incubator sales graphical user interface mass market funding user
+              experience network effects channels. Venture business-to-business
+              A/B testing. Metrics technology infrastructure validation graphical
+              user interface alpha crowdsource hypotheses conversion return on
+              investment backing. Disruptive technology interaction design
+              conversion return on investment long tail.
+            </p>
+            <button class="btn About__btn">Download Resume</button>
+          </div>
+          
         </div>
       </section>
       <section class="Work" id="work">
@@ -179,35 +182,37 @@
         <h2 class="Contact__subTitle">Get In Touch</h2>
         <div class="Contact__formContainer">
           <form action="/" method="post" class="Contact__form">
-            <div class="Contact__formField">
-              <label class="Contact__label" for="name">Name:</label>
-              <input
-                type="text"
-                name="name"
-                id="name"
-                required
-                class="Contact__input"
-              />
-            </div>
-            <div class="Contact__formField">
-              <label class="Contact__label" for="email">Email:</label>
-              <input
-                type="email"
-                name="email"
-                id="email"
-                required
-                class="Contact__input"
-              />
-            </div>
-            <div class="Contact__formField">
-              <label class="Contact__label" for="phone">Phone Number:</label>
-              <input
-                type="text"
-                name="phone"
-                id="phone"
-                required
-                class="Contact__input"
-              />
+            <div class="Contact__inputs">
+              <div class="Contact__formField">
+                <label class="Contact__label" for="name">Name:</label>
+                <input
+                  type="text"
+                  name="name"
+                  id="name"
+                  required
+                  class="Contact__input"
+                />
+              </div>
+              <div class="Contact__formField">
+                <label class="Contact__label" for="email">Email:</label>
+                <input
+                  type="email"
+                  name="email"
+                  id="email"
+                  required
+                  class="Contact__input"
+                />
+              </div>
+              <div class="Contact__formField">
+                <label class="Contact__label" for="phone">Phone Number:</label>
+                <input
+                  type="text"
+                  name="phone"
+                  id="phone"
+                  required
+                  class="Contact__input"
+                />
+              </div>
             </div>
             <div class="Contact__MessageField">
               <label class="Contact__label" for="message">Message:</label>
