Added a JavaScript file for getting the data from the form

--- a/index.html
+++ b/index.html
@@ -51,7 +51,11 @@
         <h2 class="About__subTitle">My Name Is DaJuan Harris</h2>
         <div class="About__content">
           <div class="About__imgContainer">
-            <img class="About__img" src="./assets/DJH.png" alt="DaJuan Harris" />
+            <img
+              class="About__img"
+              src="./assets/DJH.png"
+              alt="DaJuan Harris"
+            />
           </div>
           <div class="About__bioContent">
             <p class="About__bio">
@@ -65,14 +69,13 @@
             <p class="About__bio">
               Incubator sales graphical user interface mass market funding user
               experience network effects channels. Venture business-to-business
-              A/B testing. Metrics technology infrastructure validation graphical
-              user interface alpha crowdsource hypotheses conversion return on
-              investment backing. Disruptive technology interaction design
-              conversion return on investment long tail.
+              A/B testing. Metrics technology infrastructure validation
+              graphical user interface alpha crowdsource hypotheses conversion
+              return on investment backing. Disruptive technology interaction
+              design conversion return on investment long tail.
             </p>
             <button class="btn About__btn">Download Resume</button>
           </div>
-          
         </div>
       </section>
       <section class="Work" id="work">
@@ -279,5 +282,6 @@
         </ul>
       </section>
     </footer>
+    <script src="javascript/main.js"></script>
   </body>
 </html>
